# text_watermark

./: Ui_mainform.py  Ui_watermarkColorSettings.py  colorDetection.py  colorList.py  config.ini  mainform.ui  pyproject.toml  text_watermark.py  text_watermark.spec  watermarkColorSettings.ui
